--- a/P6_02_style.css
+++ b/P6_02_style.css
@@ -2,26 +2,26 @@ header
 
 {
     color: white;
-}
-
-#header_container
-
-{
     background: #577781;
     display:flex;
-    justify-content:space-around;
-}
+    justify-content:center;
+    height: 100px;
+    margin: 25px;
+    align-items: center;
+    font-size: xx-large;
+    font-family: Arial;
 
-#bandeau
-{
-    display:flex;
-    justify-content:space-around;
 }
 
 #logo
 
 {
     position: absolute;
-    top: 7px;
-    left: 13px;
+    left: 50px;
+}
+
+.bandeau
+{
+    display:flex;
+    justify-content:center;
 }
