--- a/P6_02_style.css
+++ b/P6_02_style.css
@@ -20,8 +20,24 @@ header
     left: 50px;
 }
 
+.menu
+
+{
+    padding: 10px;
+}
 .bandeau
 {
     display:flex;
     justify-content:center;
+     align-items: center;
+}
+
+
+ul
+
+{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+    text-align: center;
 }
