--- a/P6_02_style.css
+++ b/P6_02_style.css
@@ -97,7 +97,7 @@ ul
 	height: 200px;
 }
 
-#a5, #a6, #a7
+#a5, #b5, #c5, #d5, #a6, #b6, #c6, #d6, #a7, #b7, #c7, #d7
 {
     border: 7px solid black;
     margin: 4px;
