--- a/P6_02_style.css
+++ b/P6_02_style.css
@@ -7,7 +7,7 @@ header {
     margin: 2%;
     align-items: center;
     font-size: xx-large;
-    font-family: Arial;
+    font-family: Arial, serif;
 }
 
 #banner_title {
@@ -68,7 +68,7 @@ p {
 	height: 200px;
 }
 
-#a5, #b5, #c5, #d5, #a6, #b6, #c6, #d6, #a7, #b7, #c7, #d7 {
+.hide {
     border: 7px solid black;
     margin: 4px;
     width: 20%;
@@ -92,11 +92,12 @@ p {
 }
 
 /* Modal Content/Box */
-.modal-content {
-  margin: 15%; /* 15% from the top and centered */
-  padding: 20%;
+.modal_content {
+    text-align: center;
+  margin: auto; /* 15% from the top and centered */
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
+    background-color: whitesmoke;
 }
 
 /* The Close Button */
@@ -105,6 +106,7 @@ p {
   float: right;
   font-size: 28px;
   font-weight: bold;
+    list-style-type: none;
 }
 
 .close:hover,
@@ -112,10 +114,6 @@ p {
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
-
-li {
-    list-style-type: none;
 }
 
 body {
