--- a/P6_02_style.css
+++ b/P6_02_style.css
@@ -77,7 +77,7 @@ p {
 }
 
 /* The Modal (background) */
-.modal {
+#modal_container {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -92,7 +92,7 @@ p {
 }
 
 /* Modal Content/Box */
-.modal_content {
+#modal_content {
     text-align: center;
   margin: auto; /* 15% from the top and centered */
   border: 1px solid #888;
@@ -101,16 +101,16 @@ p {
 }
 
 /* The Close Button */
-.close {
-  color: #aaa;
+#close {
+  color: black;
   float: right;
   font-size: 28px;
   font-weight: bold;
     list-style-type: none;
 }
 
-.close:hover,
-.close:focus {
+#close:hover,
+#close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -119,4 +119,8 @@ p {
 body {
     text-align: center;
     background-color: white;
+}
+
+.modal_img{
+    margin-top: 1%;
 }
