--- a/P6_02_style.css
+++ b/P6_02_style.css
@@ -47,6 +47,7 @@ p {
     display:flex;
     justify-content:center;
      align-items: center;
+    list-style-type: none;
 }
 
 #play_button {
@@ -67,12 +68,11 @@ p {
     width: 20%;
 	height: 200px;
 }
+.img_movie:hover {
+  cursor: pointer;
+}
 
 .hide {
-    border: 7px solid black;
-    margin: 4px;
-    width: 20%;
-	height: 200px;
     display: none;
 }
 
@@ -92,7 +92,7 @@ p {
 }
 
 /* Modal Content/Box */
-#modal_content {
+.modal_content {
     text-align: center;
   margin: auto; /* 15% from the top and centered */
   border: 1px solid #888;
@@ -106,13 +106,10 @@ p {
   float: right;
   font-size: 28px;
   font-weight: bold;
-    list-style-type: none;
+  list-style-type: none;
 }
 
-#close:hover,
-#close:focus {
-  color: black;
-  text-decoration: none;
+#close:hover {
   cursor: pointer;
 }
 
