--- a/P6_02_style.css
+++ b/P6_02_style.css
@@ -82,7 +82,7 @@ p {
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
-  top: 0;
+  bottom: -5%;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
