--- a/P6_02_style.css
+++ b/P6_02_style.css
@@ -1,4 +1,4 @@
-header {
+#header {
     color: white;
     background: #577781;
     display:flex;
@@ -31,6 +31,7 @@ header {
     position: relative;
     right: 27%;
 }
+
 #play_button {
     width: 25%;
     border: none;
@@ -38,7 +39,7 @@ header {
     right: 27%;
 }
 
-#banner_description{
+#banner_description {
     width: 40%;
     position: relative;
 }
@@ -52,8 +53,6 @@ header {
     padding: 1%;
 }
 
-
-
 .previous, .next {
     width: 3%;
 }
@@ -64,6 +63,7 @@ header {
     width: 20%;
 	height: 200px;
 }
+
 .img_movie:hover {
   cursor: pointer;
 }
@@ -72,31 +72,28 @@ header {
     display: none;
 }
 
-/* The Modal (background) */
 #modal_container {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   bottom: -5%;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
     padding-top: 18%;
 }
 
-/* Modal Content/Box */
 .modal_content {
     text-align: center;
-  margin: auto; /* 15% from the top and centered */
+  margin: auto;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%;
     background-color: whitesmoke;
 }
 
-/* The Close Button */
 #close {
   color: black;
   float: right;
@@ -117,8 +114,6 @@ body {
 .modal_img{
     margin-top: 1%;
 }
-
-
 
 ul{
     list-style-type: none;
